--- a/New_Yerker/New_Yerker/View/MainPage.xaml
+++ b/New_Yerker/New_Yerker/View/MainPage.xaml
@@ -4,7 +4,277 @@
              x:Class="New_Yerker.MainPage">
 
     <StackLayout BackgroundColor="WhiteSmoke" >
-
+<!--Заголовок и лого-->
+        <StackLayout 
+            Orientation="Horizontal" 
+            HorizontalOptions="Fill" 
+            VerticalOptions="EndAndExpand" 
+            Padding="5,5,5,5" 
+            BackgroundColor="Black"
+            Spacing="0">
+            <Label 
+                HorizontalOptions="Start"
+                TextColor="DarkGray"
+                Text="0.0.1"
+                FontSize="Micro"/>
+            <Image 
+                Source="logo.png" 
+                HorizontalOptions="CenterAndExpand"/>
+            <Label 
+                HorizontalOptions="Start"
+                TextColor="DarkGray"
+                Text="0.0.1"
+                FontSize="Micro"/>
+        </StackLayout>
+<!--Список товаров-->
+        <ScrollView BackgroundColor="WhiteSmoke">
+            <StackLayout
+                VerticalOptions="FillAndExpand"
+                BackgroundColor="WhiteSmoke">
+                <StackLayout 
+                    Orientation="Horizontal"
+                    BackgroundColor="Ivory">
+                    <Image 
+                    BackgroundColor="Red"
+                    WidthRequest="200"
+                    HeightRequest="200"/>
+                    <StackLayout 
+                        HorizontalOptions="FillAndExpand"
+                        Margin="5">
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="StartAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="Футболка с круглым вырезом"
+                            TextColor="Black"
+                            FontSize="Medium"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Новая : 1699"
+                            TextColor="Black"
+                            BackgroundColor="Tomato"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Старая : 2399"
+                            TextColor="Black"
+                            BackgroundColor="White"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="EndAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="01011020000"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="End"
+                            HorizontalTextAlignment="Center" 
+                            Text="111111111111111111111"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                    </StackLayout>
+                </StackLayout>
+                <StackLayout 
+                    Orientation="Horizontal"
+                    BackgroundColor="Ivory">
+                    <Image 
+                    BackgroundColor="Red"
+                    WidthRequest="200"
+                    HeightRequest="200"/>
+                    <StackLayout 
+                        HorizontalOptions="FillAndExpand">
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="StartAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="Футболка с круглым вырезом"
+                            TextColor="Black"
+                            FontSize="Medium"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Новая : 1699"
+                            TextColor="Black"
+                            BackgroundColor="Tomato"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Старая : 2399"
+                            TextColor="Black"
+                            BackgroundColor="White"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="EndAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="01011020000"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="End"
+                            HorizontalTextAlignment="Center" 
+                            Text="111111111111111111111"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                    </StackLayout>
+                </StackLayout>
+                <StackLayout 
+                    Orientation="Horizontal"
+                    BackgroundColor="Ivory">
+                    <Image 
+                    BackgroundColor="Red"
+                    WidthRequest="200"
+                    HeightRequest="200"/>
+                    <StackLayout 
+                        HorizontalOptions="FillAndExpand">
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="StartAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="Футболка с круглым вырезом"
+                            TextColor="Black"
+                            FontSize="Medium"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Новая : 1699"
+                            TextColor="Black"
+                            BackgroundColor="Tomato"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Старая : 2399"
+                            TextColor="Black"
+                            BackgroundColor="White"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="EndAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="01011020000"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="End"
+                            HorizontalTextAlignment="Center" 
+                            Text="111111111111111111111"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                    </StackLayout>
+                </StackLayout>
+                <StackLayout 
+                    Orientation="Horizontal"
+                    BackgroundColor="Ivory">
+                    <Image 
+                    BackgroundColor="Red"
+                    WidthRequest="200"
+                    HeightRequest="200"/>
+                    <StackLayout 
+                        HorizontalOptions="FillAndExpand">
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="StartAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="Футболка с круглым вырезом"
+                            TextColor="Black"
+                            FontSize="Medium"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Новая : 1699"
+                            TextColor="Black"
+                            BackgroundColor="Tomato"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Старая : 2399"
+                            TextColor="Black"
+                            BackgroundColor="White"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="EndAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="01011020000"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="End"
+                            HorizontalTextAlignment="Center" 
+                            Text="111111111111111111111"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                    </StackLayout>
+                </StackLayout>
+                <StackLayout 
+                    Orientation="Horizontal"
+                    BackgroundColor="Ivory">
+                    <Image 
+                    BackgroundColor="Red"
+                    WidthRequest="200"
+                    HeightRequest="200"/>
+                    <StackLayout 
+                        HorizontalOptions="FillAndExpand">
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="StartAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="Футболка с круглым вырезом"
+                            TextColor="Black"
+                            FontSize="Medium"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Новая : 1699"
+                            TextColor="Black"
+                            BackgroundColor="Tomato"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center" 
+                            Text="Старая : 2399"
+                            TextColor="Black"
+                            BackgroundColor="White"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="EndAndExpand"
+                            HorizontalTextAlignment="Center" 
+                            Text="01011020000"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                        <Label 
+                            HorizontalOptions="CenterAndExpand" 
+                            VerticalOptions="End"
+                            HorizontalTextAlignment="Center" 
+                            Text="111111111111111111111"
+                            TextColor="Black"
+                            FontSize="Small"/>
+                    </StackLayout>
+                </StackLayout>
+            </StackLayout>
+        </ScrollView>
+<!--Поиск-->
         <StackLayout
             Orientation="Horizontal"
             BackgroundColor="Black">
@@ -14,47 +284,16 @@
                 PlaceholderColor="LightGray"
                 TextColor="White"
                 Keyboard="Numeric"
-                HorizontalOptions="FillAndExpand"/>
+                HorizontalOptions="FillAndExpand"
+                Margin="5"/>
             <Button 
                 BackgroundColor="Red"
+                WidthRequest="70"
+                HeightRequest="50"
+                CornerRadius="20"
                 VerticalOptions="EndAndExpand"
                 Margin="5"/>
         </StackLayout>
-        
-        <ScrollView BackgroundColor="WhiteSmoke">
-            <StackLayout
-                VerticalOptions="FillAndExpand"
-                BackgroundColor="WhiteSmoke">
-                <Button 
-                    BackgroundColor="Ivory" 
-                    HorizontalOptions="FillAndExpand"/>
-                <Button 
-                    BackgroundColor="Ivory" 
-                    HorizontalOptions="FillAndExpand"/>
-                <Button 
-                    BackgroundColor="Ivory" 
-                    HorizontalOptions="FillAndExpand"/>
-                <Button 
-                    BackgroundColor="Ivory" 
-                    HorizontalOptions="FillAndExpand"/>
-                <Button 
-                    BackgroundColor="Ivory" 
-                    HorizontalOptions="FillAndExpand"/>
-            </StackLayout>
-        </ScrollView>
-        <StackLayout 
-            Orientation="Horizontal" 
-            HorizontalOptions="Fill" 
-            VerticalOptions="EndAndExpand" 
-            Padding="5,5,5,5" 
-            BackgroundColor="Black"
-            Spacing="5">
-            <Button BackgroundColor="Red" HorizontalOptions="StartAndExpand">
 
-            </Button>
-            <Button BackgroundColor="Red" HorizontalOptions="EndAndExpand">
-
-            </Button>
-        </StackLayout>
     </StackLayout>
 </ContentPage>
